--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -25,7 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <script src="https://use.fontawesome.com/957fc7c0e3.js"></script>
-    <title>React App</title>
+    <title>AMAZONA</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
